--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome Page</title>
-    <style>
-        body {
-            background-color: blue;
-            color: white;
-            text-align: center;
-            font-family: Arial, sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome</h1>
+    <h1>Welcome to Singapore</h1>
+    <div class="video-container">
+        <video controls autoplay loop>
+            <source src="resources/videos/IMG_3166.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
 </body>
 </html>
